--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,8 @@ hr {
  */
 
 img {
+  max-width: 100%;
+  height: auto;
   vertical-align: middle;
 }
 
@@ -140,11 +142,74 @@ body {
   background: url(../img/fieldfresh-logo.png) no-repeat;
 }
 
+.page-header form {
+  overflow: hidden;
+  width: 80%;
+  margin-top: 6px;
+  background-color: transparent;
+  background-color: rgba(0, 0, 0, .12);
+  border-radius: 30px;
+  transition: .2s ease-out;
+}
+
+.page-header form.focused {
+  width: 100%;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .3), 0 1px 3px rgba(255, 255, 255, .5);
+}
+
+.page-header form .submit {
+  float: left;
+  margin-top: 1px;
+  margin-left: 1px;
+}
+
+
+.page-header form .clear-input {
+  float: right;
+  width: 70px;
+  width: -webkit-calc(100% - 32px);
+  width: calc(100% - 32px);
+  height: 32px;
+  border: 0;
+  padding: 0 0 0 10px;
+  font-size: .875em;
+  color: white;
+  background-color: transparent;
+}
+
+.page-header form .clear-input:focus {
+  outline: 0;
+}
+
+
+.clear-input::-webkit-input-placeholder {
+   color: white;
+   text-overflow: ellipsis !important;
+   overflow: hidden;
+}
+
+.clear-input::-moz-placeholder {
+   color: white;
+   text-overflow: ellipsis !important;
+   overflow: hidden;
+}
+
+.clear-input:-ms-input-placeholder {
+   color: white;
+   text-overflow: ellipsis !important;
+   overflow: hidden;
+}
+
 .page-header .container {
   position: relative;
 }
 
+
+
+/* Jumbotron ( green area ) */
+
 .page-header .jumbotron {
+  position: relative;
   height: 15.9375em;
   background-color: #aede85;
   background-image: url(../img/fruit-veggies.svg);
@@ -161,7 +226,7 @@ body {
   position: relative;
   z-index: 10;
   min-height: 2000px;
-  background: ghostwhite;
+  background: white;
 }
 
 .main-nav {
@@ -191,14 +256,83 @@ body {
   text-decoration: underline;
 }
 
+.main-nav a:active,
 .main-nav a.active {
   color: #b22222;
 }
 
+.round-btn {
+  display: inline-block;
+  height: 45px;
+  width: 45px;
+  border: 0;
+  padding: 0;
+  border-radius: 50%;
+  background-color: #b7f262;
+  box-shadow: inset 1px 1px 3px 0 rgba(255, 255, 255, .5),
+              inset -1px -1px 5px -1px rgba(0, 0, 0, .3),
+              1px 1px 3px rgba(0, 0, 0, .15);
+  transition: .15s ease-out;
+}
+
+.round-btn.btn-small {
+  height: 30px;
+  width: 30px;
+}
 
 
+.round-btn:focus,
+.round-btn:hover {
+  background-color: #b22222;
+  outline: 0;
+}
+.round-btn:active {
+  background-color: #911414;
+}
 
 
+.carousel-wrap {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  margin-top: 1.25em;
+  overflow: hidden;
+}
+
+.carousel-container {
+  position: relative;
+}
+
+.carousel-wrap .slide {
+  position: relative;
+  width: inherit;
+  height: 300px;
+  background: gray;
+}
+
+.carousel-btns {
+  position: absolute;
+  z-index: 20;
+  top: 50%;
+  margin-top: -22.5px;
+}
+
+.carousel-index-btn {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-right: 18px;
+  border-radius: 50%;
+  background: #abda82;
+}
+
+.carousel-index-btn:last-child {
+  margin-right: 0;
+}
+
+.carousel-index-btn.active {
+  background: #b22222;
+}
 
 
 
@@ -206,6 +340,14 @@ body {
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+
+.relative {
+  position: relative;
+}
+
+.text-center {
+  text-align: center;
+}
 
 /*
  * Image replacement
